# graduation_project

./: .gitignore  QUICKSTART.md  README.md  activate.bat  activate.sh  app.py  clean_cache.bat  main.py  pyproject.toml  requirements.txt  run_custom_test.bat  run_test.bat  run_test.sh  环境配置指南.md
agents/: planner.py  scheduler.py
agents/critic/: __init__.py  consistency.py
agents/executor/: __init__.py  evidence_rag.py  genos_agent.py  report.py  scoring.py  sequence_context.py  variant_filter.py
configs/: run.yaml  server.yaml
docs/: AI解释功能使用指南.md  DCS_API配置指南.md  RAG增强说明.md  README_知识库部署.md  Server_Deployment.md  修复基因字段.md  当前配置.md  知识库下载指南.md  知识库部署完成报告.md  立即开始.md  迁移到DCS_API.md
examples/: 1kg_subset.vcf  README.md  benchmark_set.vcf  subset_clinvar.vcf  test.vcf  test_with_genes.vcf
tests/: debug_api.py  test_remote_rag.py
tools/: build_knowledge_index.py  build_knowledge_index_enhanced.py  deepseek_client.py  download_1kg_sample.py  download_essential_kb.py  download_knowledge_bases.py  fasta_utils.py  generate_test_vcf.py  genos_client.py  remote_knowledge.py  run_benchmark.py  subset_vcf.py
